2009-06-06  Andreas Kirschbaum

	* Fix bind command to allow re-binding of keys.

2009-06-01  Andreas Kirschbaum

	* Report connection failures to user.

	* Do not exit the application on ESC while connecting to a server.

2009-05-25  Andreas Kirschbaum

	* Disable per-dialog key bindings of cursor keys in inventory dialog. Now the
	character may move around while the inventory dialog is open.

	* Make login/logout messages darker to improve readability.

	* Do not write invalid keybindings files.

2009-05-24  Andreas Kirschbaum

	* Add "def item" skin command. Move recurring parameters from "item"
	and "inventory_list" commands to "def item" parameters.

2009-05-23  Andreas Kirschbaum

	* Make /tell messages darker to improve readability.

	* Add 'R' keybinding: reply to last player that has sent a /tell command.

2009-05-21  Andreas Kirschbaum

	* Fix display issues when the character is running.

2009-04-16  Andreas Kirschbaum

	* Add "clear" command to clear the message window.

2009-03-16  Andreas Kirschbaum

	* Ignore media tags in communication
	messages (chat/shout/say/etc.).

2009-03-08  Andreas Kirschbaum

	* Add spellpoint and grace indicators right above the player.

	* ragnorok: Make 'chat' messages darker to improve readability.

	* Fix crash due to "java.util.ConcurrentModificationException" when updating
	the ground or inventroy view.

	* Save shortcuts per character.

2009-02-22  Andreas Kirschbaum

	* Fix shortcuts loader for commands.

	* Make spell shortcuts work when spells are gained or lost.

2009-02-21  Andreas Kirschbaum

	* Correctly save and load shortcuts.txt.

	* prelude: clear command input field after the command has been
	executed.

	* Update shortcut images from "?" when the face becomes available.

2009-02-20  Andreas Kirschbaum

	* Add tooltips to shortcuts.

	* Make skin 'prelude' work again.

2009-02-16  Andreas Kirschbaum

	* Change socket options: enable TCP_NODELAY, "shutdown" socket
	before close.
