@@ -1,5 +1,7 @@
 2009-06-06  Andreas Kirschbaum
 
+	* Add debug_colors command to print text using different colors.
+
 	* Fix bind command to allow re-binding of keys.
 
 2009-06-01  Andreas Kirschbaum
